--- a/analysis/saliency.ipynb
+++ b/analysis/saliency.ipynb
@@ -80,8 +80,8 @@
    "source": [
     "CHECKPOINT_PATH = \"../models/baselines/task2/fmcib_finetuned.torch\"\n",
     "state_dict = torch.load(CHECKPOINT_PATH)\n",
-    "trained_trunk =  state_dict['trunk_state_dict']\n",
-    "trained_head = state_dict['head_state_dict']\n",
+    "trained_trunk = state_dict[\"trunk_state_dict\"]\n",
+    "trained_head = state_dict[\"head_state_dict\"]\n",
     "\n",
     "trained_trunk.keys(), trained_head.keys()"
    ]
@@ -435,7 +435,8 @@
    ],
    "source": [
     "from fmcib.visualization.verify_io import visualize_seed_point\n",
-    "visualize_seed_point(df.iloc[0]) # Visualize annotations on the 0th row. \n"
+    "\n",
+    "visualize_seed_point(df.iloc[0])  # Visualize annotations on the 0th row."
    ]
   },
   {
@@ -456,21 +457,21 @@
     "def plot_3d_image(image, cmap=None):\n",
     "    \"\"\"\n",
     "    Plot 3D image slices (axial, coronal, sagittal) at the mid values of each dimension.\n",
-    "    \n",
+    "\n",
     "    Args:\n",
     "        image (numpy.ndarray): 3D or 4D image array (single or 3-channel)\n",
     "    \"\"\"\n",
-    "    \n",
+    "\n",
     "    # Handle single channel and 3-channel images\n",
     "    if image.ndim == 3:\n",
     "        image = image[np.newaxis, ...]  # Add channel dimension\n",
     "    elif image.ndim != 4:\n",
     "        raise ValueError(\"Image must be 3D or 4D (with channels)\")\n",
-    "    \n",
+    "\n",
     "    # Calculate mid values\n",
     "    channels, depth, height, width = image.shape\n",
     "    mid_z, mid_y, mid_x = depth // 2, height // 2, width // 2\n",
-    "    \n",
+    "\n",
     "    # Function to plot a slice\n",
     "    def plot_slice(slice_data, title, position):\n",
     "        plt.subplot(1, 3, position)\n",
@@ -480,7 +481,7 @@
     "            plt.imshow(np.moveaxis(slice_data, 0, -1))\n",
     "        plt.title(title)\n",
     "        plt.axis(\"off\")\n",
-    "    \n",
+    "\n",
     "    # Plot axial slice\n",
     "    plot_slice(image[:, mid_z, :, :], \"Axial\", 1)\n",
     "\n",
@@ -492,6 +493,7 @@
     "\n",
     "    plt.tight_layout()\n",
     "    plt.show()\n",
+    "\n",
     "\n",
     "# Example usage:\n",
     "# plot_3d_image(image)"
@@ -541,7 +543,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "model = model.to(\"cuda:0\")\n",
     "activation_model = GuidedBackpropSmoothGrad(model)"
    ]
@@ -608,10 +609,15 @@
     "smooth_out = (smooth_out - smooth_out.min()) / (smooth_out.max() - smooth_out.min())\n",
     "\n",
     "# Blend the original image with the activation map\n",
-    "blended = blend_images(torch.from_numpy(data).unsqueeze(0), \n",
-    "                       torch.from_numpy(smooth_out).unsqueeze(0),\n",
-    "                       alpha=0.6, cmap=\"jet\", \n",
-    "                       rescale_arrays=False, transparent_background=False)\n",
+    "blended = blend_images(\n",
+    "    torch.from_numpy(data).unsqueeze(0),\n",
+    "    torch.from_numpy(smooth_out).unsqueeze(0),\n",
+    "    alpha=0.6,\n",
+    "    cmap=\"jet\",\n",
+    "    rescale_arrays=False,\n",
+    "    transparent_background=False,\n",
+    ")\n",
+    "\n",
     "\n",
     "# Function to plot and display images\n",
     "def plot_and_show(image, title, cmap=None):\n",
@@ -620,10 +626,11 @@
     "    plot_3d_image(image, cmap=cmap)\n",
     "    plt.show()\n",
     "\n",
+    "\n",
     "# Plot blended image, original image, and activation map\n",
     "plot_and_show(blended.numpy(), \"Blended Image\")\n",
     "plot_and_show(data, \"Original Image\", cmap=\"gray\")\n",
-    "plot_and_show(smooth_out, \"Activation Map\")\n"
+    "plot_and_show(smooth_out, \"Activation Map\")"
    ]
   },
   {
